# ncmpc

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.rst  TODO  autogen.sh  cleanup.sh  colors.c  colors.h  command.c  command.h  conf.c  conf.h  configure.ac  langinfo.c  libmpdclient.c  libmpdclient.h  list_window.c  list_window.h  main.c  meson.build  meson_options.txt  mkinstalldirs  mpc.c  mpc.h  options.c  options.h  out  screen.c  screen.h  screen_file.c  screen_file.h  screen_help.c  screen_help.h  screen_keydef.c  (+10 more)
.github/workflows/: build.yml
doc/: Makefile.am  conf.py  config.sample  doxygen.conf.in  index.rst  keys.sample  meson.build  ncmpc.1  ncmpc.lirc  ncmpcrc  ncmpcrc.sample
lyrics/: 01-hd.sh  02-lyricwiki.rb  03-leoslyrics.py  10-hd.sh  15-leoslyrics.sh  20-azlyrics.py  20-lyricwiki.rb  25-musixmatch.py  30-karaoke_texty.py  30-leoslyrics.py  40-tekstowo.py  50-genius.py  51-supermusic.py  52-zeneszoveg.py  60-google.py  hd.py  hd.sh  leoslyrics.py  lyricswiki.rb
m4/: ax_with_curses.m4  socklen_t.m4
m4/CVS/: Entries  Repository  Root
plugins/: Makefile.am
plugins/hd/: Makefile.am  lyrics_hd.c
plugins/leoslyrics/: Makefile.am  lyrics_leoslyrics.c
po/: LINGUAS  Makefile.in  POTFILES  POTFILES.in  cs.po  da.po  de.po  en.po  eo.po  es.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  ie.po  it.po  ja.po  ka.po  ko.po  lt.po  meson.build  nb.po  ncmpc.pot  nl.po  no.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po
src/: AlbumListPage.cxx  AlbumListPage.hxx  ArtistListPage.cxx  ArtistListPage.hxx  AsioServiceFwd.hxx  AsyncUserInput.cxx  AsyncUserInput.hxx  BasicColors.cxx  BasicColors.hxx  BasicMarquee.cxx  BasicMarquee.hxx  Bindings.cxx  Bindings.hxx  ChatPage.cxx  ChatPage.hxx  Command.cxx  Command.hxx  Compiler.h  Completion.cxx  Completion.hxx  ConfigFile.cxx  ConfigFile.hxx  ConfigParser.cxx  ConfigParser.hxx  CustomColors.cxx  CustomColors.hxx  DelayedSeek.cxx  DelayedSeek.hxx  Deleter.hxx  EditPlaylistPage.cxx  EditPlaylistPage.hxx  Event.hxx  FileBrowserPage.cxx  FileBrowserPage.hxx  FileListPage.cxx  FileListPage.hxx  GlobalBindings.cxx  GlobalBindings.hxx  HelpPage.cxx  HelpPage.hxx  (+324 more)
src/client/: aconnect.cxx  aconnect.hxx  gidle.hxx  meson.build  mpdclient.cxx  mpdclient.hxx
src/co/: All.hxx  AwaitableHelper.hxx  Compat.hxx  InvokeTask.hxx  Task.hxx  UniqueHandle.hxx  meson.build
src/dialogs/: KeyDialog.cxx  KeyDialog.hxx  ModalDialog.cxx  ModalDialog.hxx  ModalDock.hxx  TextInputDialog.cxx  TextInputDialog.hxx  YesNoDialog.cxx  YesNoDialog.hxx  meson.build
src/event/: Loop.cxx  Loop.hxx  PipeEvent.hxx  SignalMonitor.cxx  SocketEvent.hxx  TimerEvent.hxx  TimerList.cxx  TimerList.hxx  TimerWheel.hxx  meson.build
src/event/net/: ConnectSocket.cxx  ConnectSocket.hxx
src/io/: Path.hxx
src/io/uring/: Features.h  Features.hxx
src/lib/fmt/: ToSpan.cxx  ToSpan.hxx  meson.build
src/net/: AsyncConnect.cxx  AsyncConnect.hxx  AsyncHandler.hxx  AsyncResolveConnect.cxx  AsyncResolveConnect.hxx  Features.hxx  IPv4Address.hxx  Resolver.cxx  Resolver.hxx  SocketAddress.cxx  SocketAddress.hxx  TimeoutError.hxx  UniqueSocketDescriptor.hxx  async_connect.c  async_connect.cxx  async_connect.h  async_connect.hxx  async_rconnect.c  async_rconnect.cxx  async_rconnect.hxx  meson.build  resolver.c  resolver.cxx  resolver.hxx  socket.c  socket.cxx  socket.h  socket.hxx  types.h  types.hxx
src/page/: Container.hxx  FindSupport.cxx  FindSupport.hxx  ListPage.hxx  Page.cxx  Page.hxx  ProxyPage.cxx  ProxyPage.hxx  TextPage.cxx  TextPage.hxx  meson.build
src/system/: EventPipe.cxx
src/ui/: Bell.cxx  Bell.hxx  Keys.hxx  ListCursor.cxx  ListCursor.hxx  ListRenderer.hxx  ListText.hxx  ListWindow.cxx  ListWindow.hxx  Options.hxx  Size.hxx  TextListRenderer.cxx  Window.hxx  meson.build  paint.hxx
src/util/: ByteOrder.hxx  Cancellable.hxx  Compiler.h  FNVHash.hxx  IntrusiveList.hxx  LocaleString.cxx  LocaleString.hxx  NulledString.hxx  ReturnValue.hxx  SPrintf.hxx  StringCompare.hxx  StringStrip.hxx  StringUTF8.cxx  StringUTF8.hxx  UriUtil.cxx  UriUtil.hxx  meson.build
src/win/: meson.build  ncmpc_win32_rc.rc.in
subprojects/: .gitignore  libmpdclient.wrap
test/: meson.build  run_hscroll.c  run_hscroll.cxx
